[package]
name = "tokio-utun"
version = "0.1.2"
authors = ["Jake McGinty <me@jake.su>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/mcginty/tokio-utun"
homepage = "https://github.com/mcginty/tokio-utun"
documentation = "https://docs.rs/tokio-utun"
description = """
Utun bindings for Tokio
"""
categories = ["asynchronous"]

[dependencies]
bytes = "0.4"
futures = "0.1.11"
iovec = "0.1"
libc = "0.2"
log = "0.3"
mio = "^0.6"
mio-utun = "^0.6.3"
tokio-core = "^0.1"
tokio-io = "^0.1"

